fix(review) 리뷰 반영
- 불필요한 접근제어 확장 코드 제거
- FakeRefiner.class 위치 변경